Added tag component + state bug fixes

--- a/src/renderer/client/routes/Root.css
+++ b/src/renderer/client/routes/Root.css
@@ -1,6 +1,12 @@
 .content {
-  margin: 0 auto;
+  width: 70%;
   max-width: 70%;
+  margin: 0 auto;
+
 
   font-family: 'Open Sans', serif;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
