--- a/src/renderer/client/components/TextAreaInput/TextAreaInput.css
+++ b/src/renderer/client/components/TextAreaInput/TextAreaInput.css
@@ -1,9 +1,28 @@
+.textArea-container{
+  display: flex;
+  overflow-y: auto;
+  width: 100%;
+  max-width: 100%;
+
+  border: 1px grey solid;
+  border-radius: 5px;
+  color: gray;
+
+  margin-bottom: 10px;
+}
+
 .journal-input {
   width: 100%;
+  min-width: 50%;
+  max-width: 100%;
   min-height: 150px;
   max-height: 100%;
 
-  border-width: 1px;
+  border: none;
+  border-radius: 5px;
+  padding: 14px;
+  padding-left: 14px;
+
   border-color: lightgray;
   font-size: 16px;
 
