--- a/src/renderer/client/components/TagsInput/TagsInput.css
+++ b/src/renderer/client/components/TagsInput/TagsInput.css
@@ -3,10 +3,10 @@
   overflow-x: auto;
   width: 100%;
   max-width: 100%;
-  padding-left: 14px;
   border: 1px grey solid;
   border-radius: 5px;
-  color: gray
+  color: gray;
+  margin-bottom: 10px;
 }
 
 .tags-input {
@@ -16,14 +16,14 @@
   border: none;
   border-radius: 5px;
   padding: 14px;
-  padding-left: 14px;
 }
 
 .tag {
   display: flex;
   align-items: center;
   margin: 7px 0;
-  margin-right: 10px;
+
+  margin-left: 10px;
   padding: 0 10px;
   padding-right: 5px;
   border-radius: 5px;
