--- a/src/renderer/client/components/ActionInput/ActionInput.css
+++ b/src/renderer/client/components/ActionInput/ActionInput.css
@@ -16,6 +16,13 @@
   margin-bottom: 10px;
 }
 
+.key-input {
+  width: 100%;
+  margin-right: 15px;
+}
+
+
+
 .action {
   display: flex;
   align-items: flex-start;
