--- a/src/renderer/client/components/TextAreaInput/TextAreaInput.css
+++ b/src/renderer/client/components/TextAreaInput/TextAreaInput.css
@@ -11,12 +11,13 @@
   margin-bottom: 10px;
 }
 
-.journal-input {
+.entry-input {
   width: 100%;
   min-width: 50%;
   max-width: 100%;
   min-height: 150px;
   max-height: 100%;
+  height: 300px;
 
   border: none;
   border-radius: 5px;
