Added scroll for action list

--- a/src-client/client/components/ActionInput/ActionInput.css
+++ b/src-client/client/components/ActionInput/ActionInput.css
@@ -2,6 +2,12 @@
   width: 100%;
 }
 
+.action-collection{
+  overflow: auto;
+  height: 25vh;
+
+}
+
 .action {
   display: flex;
   align-items: flex-start;
