--- a/src-client/client/components/TextAreaInput/TextAreaInput.css
+++ b/src-client/client/components/TextAreaInput/TextAreaInput.css
@@ -10,13 +10,10 @@
 }
 
 .entry-input {
-
   width: 100%;
   min-width: 50%;
   max-width: 100%;
-  min-height: 150px;
-  max-height: 100%;
-  height: 300px;
+  min-height: 30vh;
 
   border: none;
   border-radius: 5px;
